# OSNAP

./: .env.example  .env.receiver  .env.sender  .env.template  .gitignore  .gitmodules  AGENTS.html  BIG_IDEA.html  CHANGELOG.md  Dockerfile  Implementing an Agent Registry Server with Redis.html  OSNAP Protocol  OSNAP_Protocol.html  README.html  README.md  Registry API Specification.html  TODO  TOOLS.html  agent_basics.ipynb  big_picture.html  docker-compose-second.yml  docker-compose.receiver.yml  docker-compose.second.yml  docker-compose.sender.yml  docker-compose.yml  genindex.html  getting_started.html  index.html  main.py  objects.inv  outbound_agent.py  pyproject.toml  repair parsing for output cleaning.md  requirements.txt  search.html  searchindex.js  server.py  simple_server.py  start.sh  tasks.db-journal  (+1 more)
.VSCodeCounter/2023-05-29_09-17-26/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: docs_pages.yml  main.yml  publish.yml
RFC/: 01_PROTOCOL.html  01_PROTOCOL.md  TEMPLATE.html  TEMPLATE.md
_build/.jupyter_cache/: global.db
_sources/: Registry API Specification.md.txt  index.rst.txt
_sources/key_concepts/: key_concepts.rst.txt
_sources/swarms/: how_swarms_work.md.txt
agents/: agent_basics.html  agents.html  creating_an_agent.html  oSnapAgent.py  planner.py  what_are_agents.html
docs/: How-To: Implementing an Agent Registry Server with Redis.md  Implementing an Agent Registry Server with Redis.md  OSNAP_Protocol.md  README.rst  Registry API Specification  USE_CASES.md  conf.py  index.rst
docs/RFC/: 01_PROTOCOL.md
docs/agents/: agents.rst  what_are_agents.ipynb
docs/swarms/: swarm_registry.md  swarms.rst
docs/use_cases/: use_cases.md
examples/2_containers/: .env.example  Dockerfile.receiver  Dockerfile.sender  build.sh  docker-compose.receiver.yml  docker-compose.sender.yml  pyproject.toml  server.py
examples/discord/: create_a_swarm_on_discord.html  test_discord_adapter.py
examples/discord_ping_pong/: ping_bot.py  pong_bot.py
examples/discord_pingpong/: ping_bot.py  pong_bot.py
examples/discord_swarm/: .env.local  .env.template  README.md  app.py  dalle_bot.py  langchain_bot.py  ping_bot.py  pong_bot.py  taskmanager.py  tasks.db
examples/fastapi/: README.md  alice.py  app.py  bob.py  fastapi.ipynb
examples/imagine_discord/: .env.template  SwarmManager.py  TODO  dalle_bot.py  dummy.txt  googling_agent.py  ping_bot.py  swarm_manager.py  swarm_manager_old.py
examples/loop_gpt/: pyproject.toml
examples/loop_gpt/client/: .env.local.template  .gitignore  README.md  package.json
examples/loop_gpt/client/components/AgentConfig/: AgentConfigComponent.js  AgentConfigDrawer.js  CycleOverviewComponent.js
examples/loop_gpt/client/components/BottomNav/: BottomNavigationComponent.js  UploadFileDialog.js
examples/loop_gpt/client/components/MessageView/: CycleReportComponent.js  SystemMessageComponent.js  index.js
examples/loop_gpt/client/components/MessageView/shared/: CycleNumberComponent.js  CycleStageContainer.js  IconListLine.js  RowPanelContainer.js  ThoughtsMessageComponent.js
examples/loop_gpt/client/pages/: _app.js  chat.js  index.js
examples/loop_gpt/client/sample-data/: sample-agent-init_state.json  sample-agent-later-state.json  sample-messages.js
examples/loop_gpt/client/store/: store.js
examples/loop_gpt/client/store/reducers/: agentReducers.js  configReducers.js  cycleReducer.js  index.js  socketReducer.js  uiReducer.js
examples/loop_gpt/client/store/types/: index.js
examples/loop_gpt/client/utils/: handleMessage.js  parseHistory.js  socket.js
examples/loop_gpt/server/: requirements.txt  server.py
examples/smart_gpt/: main.py  pyproject.toml
getting_started/: getting_started.html
html/: AGENTS.html  BIG_IDEA.html  Implementing an Agent Registry Server with Redis.html  OSNAP_Protocol.html  README.html  Registry API Specification.html  TOOLS.html  big_picture.html  genindex.html  getting_started.html  index.html  key_concepts.html  objects.inv  search.html  searchindex.js
html/.doctrees/: README.doctree  environment.pickle  getting_started.doctree  index.doctree
html/RFC/: TEMPLATE.html
html/_sources/: AGENTS.md.txt  Registry API Specification.md.txt  TOOLS.md.txt  big_picture.rst.txt
html/agents/: Agents (1).html  agents.html  create_an_agent.html  what_are_agents.html  what_is_an_agent.html
key_concepts/: key_concepts.html
lib/: README.md  __init__.py  osnap.py
osnap/: __init__.py  api.py  main.py  osnap.py
osnap_client/: TODO  __init__.py  main.py
pubsub/: __init__.py  pubsub.py
registry/: __init__.py  agent_registry.py
swarms/: how_swarms_work.html  swarm_registry.html  swarms.html
tests/: bs.ipynb  test_agent.py  test_cc.py  test_discord_adapter.py  test_osnap.py  test_registry.py  testingdecor.ipynb
use_cases/: use_cases.html
(+160 files in other folders)
