[tool.poetry]
name = "osnap"
version = "0.1.0"
description = ""
authors = ["Forrest Murray <FMurray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.154"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
openai = "^0.27.5"
redis = "^4.5.4"
cryptography = "^40.0.2"
rsa = "^4.9"
httpx = "^0.24.0"
watchfiles = "^0.19.0"
networkx = "^3.1"



[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
