[tool.poetry]
name = "loop-gpt-osnap"
version = "0.1.0"
description = ""
authors = ["Forrest Murray <FMurray@gmail.com>"]
readme = "README.md"
packages = [{include = "loop_gpt_osnap"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
