[tool.poetry]
name = "loop-gpt-osnap"
version = "0.1.0"
description = ""
authors = ["Forrest Murray <FMurray@gmail.com>"]
readme = "README.md"
packages = [{include = "loop_gpt_osnap"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.6"
bs4 = "^0.0.1"
selenium = "^4.9.1"
numpy = "^1.24.3"
tiktoken = ">=0.3.3"
requests = "^2.30.0"
colorama = "^0.4.6"
duckduckgo-search = ">=2.9.4"
google-api-python-client = "^2.86.0"
webdriver-manager = "^3.8.6"
simpleeval = "^0.9.13"
transformers = {extras = ["hf"], version = "^4.29.1"}
sentence-transformers = {extras = ["hf"], version = "^2.2.2"}
accelerate = {extras = ["hf"], version = "^0.19.0"}
bitsandbytes = {extras = ["hf"], version = "^0.38.1"}
torch = {extras = ["hf"], version = "^2.0.1"}
python-dotenv = "^1.0.0"

langchain = "^0.0.154"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
redis = "^4.5.4"
cryptography = "^40.0.2"
rsa = "^4.9"
httpx = "^0.24.0"
watchfiles = "^0.19.0"
networkx = "^3.1"
websockets = "^11.0.2"
osnap_client = { path = "../../.", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
